Refactoring: removed unused modules from requirements.txt
Design:
Updated logo, removed NK branding

Loading speed:
Moved logging function to bottom of code.
Moved Start server threading to earlier in code.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ env/
 my_stderr.log
 my_stdout.log
 .DS_Store
+latest-mac-test.json
+latest-mac.json
+my_stderr.log
+my_stdout.log
+pyten.txt
+.DS_Store
