--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,24 @@
-altgraph==0.17.3
-async-timeout==4.0.2
-auto-py-to-exe==2.35.0
-bottle==0.12.25
-bottle-websocket==0.2.9
-certifi==2022.12.7
-chardet==5.1.0
-charset-normalizer==3.1.0
-click==8.1.3
-customtkinter==5.1.3
+async-timeout==4.0.3
+blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.3.0
+click==8.1.7
+customtkinter==5.2.0
 darkdetect==0.8.0
-dnslib==0.9.23
-docutils==0.19
-Eel==0.16.0
-Flask==2.2.3
+Flask==3.0.0
 Flask-SSE==1.0.0
-future==0.18.3
-gevent==22.10.2
-gevent-websocket==0.10.1
-greenlet==2.0.2
-gunicorn==20.1.0
 idna==3.4
-importlib-metadata==6.1.0
+install==1.3.5
 iso-639==0.4.5
 itsdangerous==2.1.2
 Jinja2==3.1.2
-Kivy==2.1.0
-Kivy-Garden==0.1.5
-langdetect==1.0.9
-macholib==1.16.2
-MarkupSafe==2.1.2
-Pillow==9.5.0
-pycountry==22.3.5
-Pygments==2.14.0
-pyinstaller==5.13.2
-pyinstaller-hooks-contrib==2023.3
-pyparsing==3.0.9
+MarkupSafe==2.1.3
+Pillow==10.0.1
 pypng==0.20220715.0
 qrcode==7.4.2
-redis==4.5.3
-requests==2.28.2
+redis==5.0.1
+requests==2.31.0
 six==1.16.0
-sseclient==0.0.27
-typing_extensions==4.5.0
-urllib3==1.26.15
-Werkzeug==2.2.3
-whichcraft==0.6.1
-zipp==3.15.0
-zope.event==4.6
-zope.interface==6.0
+typing_extensions==4.8.0
+urllib3==2.0.6
+Werkzeug==3.0.0
