--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,33 @@
+altgraph==0.17.4
 async-timeout==4.0.3
+auto-py-to-exe==2.40.0
 blinker==1.6.2
+bottle==0.12.25
+bottle-websocket==0.2.9
 certifi==2023.7.22
 charset-normalizer==3.3.0
 click==8.1.7
 customtkinter==5.2.0
 darkdetect==0.8.0
+Eel==0.16.0
 Flask==3.0.0
 Flask-SSE==1.0.0
+future==0.18.3
+gevent==23.9.1
+gevent-websocket==0.10.1
+greenlet==3.0.0
 idna==3.4
 install==1.3.5
 iso-639==0.4.5
 itsdangerous==2.1.2
 Jinja2==3.1.2
+macholib==1.16.3
 MarkupSafe==2.1.3
+packaging==23.2
 Pillow==10.0.1
+pyinstaller==6.0.0
+pyinstaller-hooks-contrib==2023.9
+pyparsing==3.1.1
 pypng==0.20220715.0
 qrcode==7.4.2
 redis==5.0.1
@@ -22,3 +36,6 @@ six==1.16.0
 typing_extensions==4.8.0
 urllib3==2.0.6
 Werkzeug==3.0.0
+whichcraft==0.6.1
+zope.event==5.0
+zope.interface==6.1
