--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,11 @@ bottle-websocket==0.2.9
 certifi==2023.7.22
 charset-normalizer==3.3.0
 click==8.1.7
+coverage==7.4.3
 customtkinter==5.2.0
 darkdetect==0.8.0
 Eel==0.16.0
+exceptiongroup==1.2.0
 Flask==3.0.0
 Flask-SSE==1.0.0
 future==0.18.3
@@ -17,6 +19,8 @@ gevent==23.9.1
 gevent-websocket==0.10.1
 greenlet==3.0.0
 idna==3.4
+importlib_metadata==7.0.2
+iniconfig==2.0.0
 install==1.3.5
 iso-639==0.4.5
 itsdangerous==2.1.2
@@ -25,17 +29,22 @@ macholib==1.16.3
 MarkupSafe==2.1.3
 packaging==23.2
 Pillow==10.0.1
+pluggy==1.4.0
 pyinstaller==6.0.0
 pyinstaller-hooks-contrib==2023.9
 pyparsing==3.1.1
 pypng==0.20220715.0
+pytest==8.1.1
+pytest-cov==4.1.0
 qrcode==7.4.2
 redis==5.0.1
 requests==2.31.0
 six==1.16.0
+tomli==2.0.1
 typing_extensions==4.8.0
 urllib3==2.0.6
 Werkzeug==3.0.0
 whichcraft==0.6.1
+zipp==3.17.0
 zope.event==5.0
 zope.interface==6.1
