--- a/requirements.txt
+++ b/requirements.txt
@@ -28,13 +28,13 @@ iniconfig==2.0.0
 install==1.3.5
 iso-639==0.4.5
 itsdangerous==2.1.2
-Jinja2==3.1.2
+Jinja2==3.1.3
 macholib==1.16.3
 MarkupSafe==2.1.3
--e git+ssh://git@github.com/odonald/Opera-Access.git@eeb579c169c89cc71d87ccb0b2610131922468ea#egg=Opera_Access
+-e git+ssh://git@github.com/odonald/Opera-Access.git@8d55ef41347110a595ae23b558b5f95c163d427d#egg=Opera_Access
 outcome==1.3.0.post0
 packaging==23.2
-Pillow==10.0.1
+pillow==10.3.0
 pluggy==1.4.0
 pyinstaller==6.0.0
 pyinstaller-hooks-contrib==2023.9
@@ -55,9 +55,9 @@ tomli==2.0.1
 trio==0.25.0
 trio-websocket==0.11.1
 typing_extensions==4.11.0
-urllib3==2.0.6
+urllib3==2.2.1
 watchdog==4.0.0
-Werkzeug==3.0.0
+Werkzeug==3.0.2
 whichcraft==0.6.1
 wsproto==1.2.0
 zipp==3.17.0
