--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,27 @@
+aider-chat==0.28.0
 altgraph==0.17.4
+annotated-types==0.6.0
+anyio==4.2.0
 async-timeout==4.0.3
 attrs==23.2.0
 auto-py-to-exe==2.40.0
+backoff==2.2.1
+beautifulsoup4==4.12.3
 blinker==1.6.2
 bottle==0.12.25
 bottle-websocket==0.2.9
-certifi==2023.7.22
-charset-normalizer==3.3.0
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+ConfigArgParse==1.7
 coverage==7.4.3
 customtkinter==5.2.0
 darkdetect==0.8.0
+diff-match-patch==20230430
+diskcache==5.6.3
+distro==1.9.0
 docopt==0.6.2
 Eel==0.16.0
 exceptiongroup==1.2.0
@@ -20,43 +30,92 @@ Flask-SSE==1.0.0
 future==0.18.3
 gevent==23.9.1
 gevent-websocket==0.10.1
-greenlet==3.0.0
+gitdb==4.0.11
+GitPython==3.1.40
+greenlet==3.0.3
+grep-ast==0.2.4
 h11==0.14.0
-idna==3.4
+httpcore==1.0.2
+httpx==0.26.0
+idna==3.6
 importlib_metadata==7.0.2
 iniconfig==2.0.0
 install==1.3.5
 iso-639==0.4.5
 itsdangerous==2.1.2
 Jinja2==3.1.3
+jsonschema==4.20.0
+jsonschema-specifications==2023.12.1
 macholib==1.16.3
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
--e git+ssh://git@github.com/odonald/Opera-Access.git@1650fea63e49e7bae93cd7daf4fc4f7b99f9279e#egg=Opera_Access
+mdurl==0.1.2
+mock==5.1.0
+MouseInfo==0.1.3
+networkx==3.2.1
+numpy==1.26.3
+openai==1.6.1
+-e git+ssh://git@github.com/odonald/Opera-Access.git@d4f7fc933ce37067654cff218c7c1fb299fc45d8#egg=Opera_Access
 outcome==1.3.0.post0
 packaging==23.2
-pillow==10.3.0
+pathspec==0.12.1
+pillow==10.2.0
+playwright==1.41.2
 pluggy==1.4.0
+prompt-toolkit==3.0.43
+PyAutoGUI==0.9.54
+pycparser==2.21
+pydantic==2.5.3
+pydantic_core==2.14.6
+pyee==11.0.1
+PyGetWindow==0.0.9
+Pygments==2.17.2
 pyinstaller==6.0.0
 pyinstaller-hooks-contrib==2023.9
+PyMsgBox==1.0.9
+pyobjc-core==10.2
+pyobjc-framework-Cocoa==10.2
+pyobjc-framework-Quartz==10.2
+pypandoc==1.12
 pyparsing==3.1.1
+pyperclip==1.8.2
 pypng==0.20220715.0
+PyRect==0.2.0
+PyScreeze==0.1.30
 PySocks==1.7.1
 pytest==8.1.1
 pytest-cov==5.0.0
 pytest-watch==4.2.0
+pytweening==1.2.0
+PyYAML==6.0.1
 qrcode==7.4.2
 redis==5.0.1
+referencing==0.32.0
+regex==2023.12.25
 requests==2.31.0
+rich==13.7.0
+rpds-py==0.16.2
+rubicon-objc==0.4.8
+scipy==1.11.4
 selenium==4.19.0
 six==1.16.0
-sniffio==1.3.1
+smmap==5.0.1
+sniffio==1.3.0
 sortedcontainers==2.4.0
+sounddevice==0.4.6
+soundfile==0.12.1
+soupsieve==2.5
+tiktoken==0.5.2
 tomli==2.0.1
+tqdm==4.66.1
+tree-sitter==0.20.4
+tree-sitter-languages==1.9.1
 trio==0.25.0
 trio-websocket==0.11.1
-typing_extensions==4.11.0
-urllib3==2.2.1
+typing_extensions==4.9.0
+urllib3==2.1.0
 watchdog==4.0.0
+wcwidth==0.2.12
 Werkzeug==3.0.2
 whichcraft==0.6.1
 wsproto==1.2.0
