--- a/requirements.txt
+++ b/requirements.txt
@@ -55,7 +55,6 @@ MouseInfo==0.1.3
 networkx==3.2.1
 numpy==1.26.3
 openai==1.6.1
--e git+ssh://git@github.com/odonald/Opera-Access.git@d4f7fc933ce37067654cff218c7c1fb299fc45d8#egg=Opera_Access
 outcome==1.3.0.post0
 packaging==23.2
 pathspec==0.12.1
@@ -73,9 +72,9 @@ Pygments==2.17.2
 pyinstaller==6.0.0
 pyinstaller-hooks-contrib==2023.9
 PyMsgBox==1.0.9
-pyobjc-core==10.2
-pyobjc-framework-Cocoa==10.2
-pyobjc-framework-Quartz==10.2
+#pyobjc-core==10.2
+#pyobjc-framework-Cocoa==10.2
+#pyobjc-framework-Quartz==10.2
 pypandoc==1.12
 pyparsing==3.1.1
 pyperclip==1.8.2
