--- a/requirements.txt
+++ b/requirements.txt
@@ -31,21 +31,33 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 macholib==1.16.3
 MarkupSafe==2.1.3
+MouseInfo==0.1.3
 outcome==1.3.0.post0
 packaging==23.2
 pillow==10.3.0
 pluggy==1.4.0
+PyAutoGUI==0.9.54
+PyGetWindow==0.0.9
 pyinstaller==6.0.0
 pyinstaller-hooks-contrib==2023.9
+PyMsgBox==1.0.9
+pyobjc-core==10.2
+pyobjc-framework-Cocoa==10.2
+pyobjc-framework-Quartz==10.2
 pyparsing==3.1.1
+pyperclip==1.8.2
 pypng==0.20220715.0
+PyRect==0.2.0
+PyScreeze==0.1.30
 PySocks==1.7.1
 pytest==8.1.1
 pytest-cov==4.1.0
 pytest-watch==4.2.0
+pytweening==1.2.0
 qrcode==7.4.2
 redis==5.0.1
 requests==2.31.0
+rubicon-objc==0.4.9
 selenium==4.19.0
 six==1.16.0
 sniffio==1.3.1
