modified end to end test to be run only when specifically asked for using ptw

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,9 @@
 [pytest]
 minversion = 7.0
 
-# Directories to look for the test files
 testpaths = tests
 
-# Directories to look for the source code
 pythonpath = src
+
+markers =
+    e2e: mark test as end-to-end
