--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,8 @@ Jinja2==3.1.3
 macholib==1.16.3
 MarkupSafe==2.1.3
 MouseInfo==0.1.3
+numpy==1.26.4
+opencv-python==4.9.0.80
 outcome==1.3.0.post0
 packaging==23.2
 pillow==10.3.0
